--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,10 @@
     @apply box-border;
   }
 
+  body {
+    @apply text-[#F8F8FF];
+  }
+
   :root {
     --background: 0 0% 100%;
     --foreground: 222.2 84% 4.9%;
