--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
+/* styles/fonts.css */
+@font-face {
+  font-family: 'Futura';
+  src: url('/fonts/FuturaPTBook.otf') format('otf');
+  font-weight: 400;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Futura';
+  src: url('/fonts/FuturaPTBold.otf') format('otf');
+  font-weight: 700;
+  font-style: normal;
+  font-display: swap;
+}
+
+@font-face {
+  font-family: 'Futura';
+  src: url('/fonts/FuturaPTMedium.otf') format('otf');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
+}
+
 @layer base {
   * {
     @apply box-border;
@@ -73,6 +98,7 @@
     --ring: 212.7 26.8% 83.9%;
   }
 }
+
 
 .grecaptcha-badge {
   visibility: hidden;
